--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [project]
 name = "loggerli"
-version = "0.0.1"
+version = "0.1.0"
 authors = [
-  { name="Mushaheed Syed", email="hello@mushaheed.me" },
+  { name="Mushaheed Syed", email="smushaheed@outlook.com" },
 ]
-description = "A small light weight logger"
+description = "This is a small light weight logger that provides APIs for debugging and error logging, similar to loggers in other languages, such as the Closure JS Logger and java.util.logging.Logger. The logs emitted can be listened by multiple listeners. This is completely based on pub.dev/packages/logging."
 readme = "README.md"
 requires-python = ">=3.7"
 classifiers = [
@@ -14,8 +14,8 @@ classifiers = [
 ]
 
 [project.urls]
-"Homepage" = "https://github.com/pypa/sampleproject"
-"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
+"Homepage" = "https://github.com/predatorx7/loggerli"
+"Bug Tracker" = "https://github.com/predatorx7/loggerli/issues"
 
 [build-system]
 requires = ["pdm-pep517"]
